--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,6 +107,7 @@ deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -386,6 +387,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -406,7 +408,6 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
-deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
@@ -602,8 +603,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 deny 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-deny 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-deny 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 deny 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -612,10 +611,10 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
