--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -145,6 +145,7 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
+deny 2602:fccf:100:3::14;
 deny 2602:fccf:310:1::c;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:a00:101:4:216:3eff:fe2f:1c84;
@@ -405,8 +406,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -690,6 +689,7 @@ deny 2a12:a800:2:1:45:141:215:62;
 deny 2a12:a800:2:1:45:141:215:63;
 deny 2a12:a800:2:1:45:141:215:80;
 deny 2a12:a800:2:1:45:141:215:88;
+deny 2a12:a800:2:1:45:141:215:90;
 deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
