--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -120,7 +120,6 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -218,7 +217,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.131.226;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
@@ -252,6 +250,7 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.166;
+set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.104.120.10;
@@ -720,7 +719,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -861,6 +859,7 @@ set_real_ip_from 212.95.50.77;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
+set_real_ip_from 216.9.224.232;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 220.135.36.173;
 set_real_ip_from 23.129.64.130;
@@ -917,7 +916,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -925,11 +923,8 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1282,6 +1277,7 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
+set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
@@ -1488,6 +1484,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1544,6 +1541,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
+set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
@@ -1557,7 +1555,10 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
+set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
+set_real_ip_from 2a12:a800:2:1:45:141:215:56;
+set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
@@ -1633,6 +1634,7 @@ set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.231;
 set_real_ip_from 45.138.16.239;
+set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
@@ -1646,7 +1648,10 @@ set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
+set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
+set_real_ip_from 45.141.215.56;
+set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
@@ -1733,6 +1738,7 @@ set_real_ip_from 46.246.92.34;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
+set_real_ip_from 46.8.43.110;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
@@ -1888,6 +1894,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.88.75.35;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
